// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideThumbnail renders correctly 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.svg />
</styled.div>
`;

exports[`SlideThumbnail renders in active and show index caption 1`] = `
<styled.div
  isActive={true}
  onClick={[Function]}
>
  <styled.div>
    <styled.span>
      1
    </styled.span>
  </styled.div>
  <styled.svg />
</styled.div>
`;

exports[`SlideThumbnail renders with additional class 1`] = `
<styled.div
  className="my-class"
  onClick={[Function]}
>
  <styled.svg />
</styled.div>
`;
